Added Files for John

--- a/InDesign/2024-05-13-mark/OP2024-05-13-for-web.html
+++ b/InDesign/2024-05-13-mark/OP2024-05-13-for-web.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/businesspapers.css"> -->
   <style>
     .Front-Page-Table td{vertical-align: top;}
-    /* .paraChamberSummaryHeading{text-transform: uppercase;} Removed in 2024*/
+    /* .paraChamberSummaryHeading{text-transform: uppercase;} Removed in 2024 */
     .OP-heading-outdent{margin-left: -2.5rem;}
     @font-face {
       font-family: National;
@@ -436,7 +436,7 @@
 			<p class="paraNotesTag">Notes:</p>
 			<p class="paraNotesText">Texts of Written Statements are available from the Vote Office and on the internet at <a href="https://questions-statements.parliament.uk/">https://questions-statements.parliament.uk/</a> .Committees Meeting Today</p>
 			<h4 class="paraBusinessSub-SectionHeading" id="20240513-20">Select Committees<a href="#20240513-20" aria-label="Anchor" title="Permalink for Select Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
-			<h5 class="Heading3Underlined" id="20240513-21">Scottish Affairs Committee<a href="#20240513-21" aria-label="Anchor" title="Permalink for Scottish Affairs Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Scottish Affairs Committee</p>
 			<p class="paraOrderofBusinessItemTiming">Subject: Scotland's space sector</p>
 			<p class="paraMotionText">Room 6<br>2.30pm (private), 3.00pm (public)</p>
 			<p class="paraOrderofBusinessItemTiming">Witnesses:</p>
@@ -484,7 +484,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<h5 class="Heading3Underlined" id="20240513-22">Defence Committee<a href="#20240513-22" aria-label="Anchor" title="Permalink for Defence Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Defence Committee</p>
 			<p class="paraOrderofBusinessItemTiming">Subject: Defence in the Grey Zone</p>
 			<p class="paraMotionText">The Thatcher Room, Portcullis House<br>3.15pm (private), 3.30pm (public)</p>
 			<p class="paraOrderofBusinessItemTiming">Witnesses:</p>
@@ -504,7 +504,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<h5 class="Heading3Underlined" id="20240513-23">Levelling Up, Housing and Communities Committee<a href="#20240513-23" aria-label="Anchor" title="Permalink for Levelling Up, Housing and Communities Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Levelling Up, Housing and Communities Committee</p>
 			<p class="paraOrderofBusinessItemTiming">Subject: Improving the home buying and selling process</p>
 			<p class="paraMotionText">Room 16<br>3.30pm (private), 4.00pm (public)</p>
 			<p class="paraOrderofBusinessItemTiming">Witnesses:</p>
@@ -556,7 +556,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<h5 class="Heading3Underlined" id="20240513-24">Public Accounts Committee<a href="#20240513-24" aria-label="Anchor" title="Permalink for Public Accounts Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Public Accounts Committee</p>
 			<p class="paraOrderofBusinessItemTiming">Subject: Investigation into UKHSA Health Security Campus</p>
 			<p class="paraMotionText">The Grimond Room, Portcullis House<br>3.30pm (private), 4.00pm (public)</p>
 			<p class="paraOrderofBusinessItemTiming">Witnesses:</p>
@@ -594,27 +594,27 @@
 					</tr>
 				</tbody>
 			</table>
-			<h5 class="Heading3Underlined" id="20240513-25">Administration Committee<a href="#20240513-25" aria-label="Anchor" title="Permalink for Administration Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Administration Committee</p>
 			<p class="paraMotionText">Room 5<br>4.30pm (private)</p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-26">Public Bill Committees<a href="#20240513-26" aria-label="Anchor" title="Permalink for Public Bill Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
-			<h5 class="Heading3Underlined" id="20240513-27">Football Governance Bill: Programming sub-committee<a href="#20240513-27" aria-label="Anchor" title="Permalink for Football Governance Bill: Programming sub-committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-21">Public Bill Committees<a href="#20240513-21" aria-label="Anchor" title="Permalink for Public Bill Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<p class="Heading3Underlined">Football Governance Bill: Programming sub-committee</p>
 			<p class="paraMotionText">Room 10 <br>6.00pm (private)</p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-28">Delegated Legislation Committees<a href="#20240513-28" aria-label="Anchor" title="Permalink for Delegated Legislation Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
-			<h5 class="Heading3Underlined" id="20240513-29">First Delegated Legislation Committee<a href="#20240513-29" aria-label="Anchor" title="Permalink for First Delegated Legislation Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-22">Delegated Legislation Committees<a href="#20240513-22" aria-label="Anchor" title="Permalink for Delegated Legislation Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<p class="Heading3Underlined">First Delegated Legislation Committee</p>
 			<p class="paraOrderofBusinessItemTiming">To consider the draft Carbon Capture Revenue Support (Directions, Eligibility and Counterparty) Regulations 2024, and the draft Carbon Dioxide Transport and Storage Revenue Support (Directions and Counterparty) Regulations 2024</p>
 			<p class="paraMotionText">Room 9<br>4.30pm (public)</p>
-			<h5 class="Heading3Underlined" id="20240513-30">Second Delegated Legislation Committee<a href="#20240513-30" aria-label="Anchor" title="Permalink for Second Delegated Legislation Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Second Delegated Legislation Committee</p>
 			<p class="paraOrderofBusinessItemTiming">To consider the draft Product Safety and Metrology etc. (Amendment) Regulations 2024</p>
 			<p class="paraMotionText">Room 11<br>4.30pm (public)</p>
-			<h5 class="Heading3Underlined" id="20240513-31">Third Delegated Legislation Committee<a href="#20240513-31" aria-label="Anchor" title="Permalink for Third Delegated Legislation Committee" data-anchor-icon="§" class="anchor-link"></a></h5>
+			<p class="Heading3Underlined">Third Delegated Legislation Committee</p>
 			<p class="paraOrderofBusinessItemTiming">To consider the draft International Monetary Fund (Increase in Subscription) Order 2024</p>
 			<p class="paraMotionText">Room 12<br>6.00pm (public)</p>
-			<h3 class="paraBusinessTodayChamberHeading" id="20240513-32">Announcements<a href="#20240513-32" aria-label="Anchor" title="Permalink for Announcements" data-anchor-icon="§" class="anchor-link"></a></h3>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-33">Forthcoming End of Day Adjournment Debates<a href="#20240513-33" aria-label="Anchor" title="Permalink for Forthcoming End of Day Adjournment Debates" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h3 class="paraBusinessTodayChamberHeading" id="20240513-23">Announcements<a href="#20240513-23" aria-label="Anchor" title="Permalink for Announcements" data-anchor-icon="§" class="anchor-link"></a></h3>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-24">Forthcoming End of Day Adjournment Debates<a href="#20240513-24" aria-label="Anchor" title="Permalink for Forthcoming End of Day Adjournment Debates" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Applications for 30-minute end of day adjournment debates should be made to the Table Office by 7.00pm or rise of the House, whichever is the earlier, on the Wednesdays listed below. Members can submit their application via MemberHub, from their own email account or in hard copy. Application forms are available on the Table Office page on ParliNet. The ballot takes place the day after the deadline. Members who are successful will be contacted by the Speaker’s Office.</p>
 			<p class="paraOrderofBusinessItemTiming">Tuesday 21 to Thursday 23 May (deadline Wednesday 15 May 7.00pm or the rise of the House, whichever is earlier)</p>
 			<p class="paraOrderofBusinessItemTiming">Monday 3 to Monday 10 June (deadline Wednesday 22 May 7.00pm or the rise of the House, whichever is earlier)</p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-34">Forthcoming Westminster Hall Debates<a href="#20240513-34" aria-label="Anchor" title="Permalink for Forthcoming Westminster Hall Debates" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-25">Forthcoming Westminster Hall Debates<a href="#20240513-25" aria-label="Anchor" title="Permalink for Forthcoming Westminster Hall Debates" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">The rota for answering Departments is listed below. Applications for 90, 60 and 30-minute debates should be made to the Table Office by 10.00pm or the rise of the House, whichever is the earlier, on the Mondays listed below. Members can submit their application via MemberHub, from their own email account or in hard copy. Application forms are available on the Table Office page on ParliNet. The ballot takes place the day after the deadline. Members who are successful will be contacted by the Speaker’s Office.</p>
 			<p class="paraOrderofBusinessItemTiming">Tuesday 21 and Wednesday 22 May (deadline Monday 13 May 10.00pm or the rise of the House, whichever is earlier)</p>
 			<p class="paraMotionText">The following Departments will answer: </p>
@@ -625,24 +625,24 @@
 			<p class="paraOrderofBusinessItemTiming">Tuesday 11 and Wednesday 12 June (deadline Monday 3 June 10.00pm or the rise of the House, whichever is earlier)</p>
 			<p class="paraMotionText">The following Departments will answer: </p>
 			<p class="paraMotionText">Cabinet Office; Education; Health and Social Care; Home Office; Justice; Northern Ireland; Transport; Wales; Women and Equalities; Work and Pensions</p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-35">Determination of business by the Backbench Business Committee<a href="#20240513-35" aria-label="Anchor" title="Permalink for Determination of business by the Backbench Business Committee" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-26">Determination of business by the Backbench Business Committee<a href="#20240513-26" aria-label="Anchor" title="Permalink for Determination of business by the Backbench Business Committee" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraOrderofBusinessItemTiming">Thursday 16 May in the Chamber</p>
 			<p class="paraMotionText">Debate on a Motion: Parliamentary and Health Service Ombudsman report on Women’s State Pension age: Patricia Gibson</p>
 			<p class="paraOrderofBusinessItemTiming">Thursday 16 May in Westminster Hall</p>
 			<p class="paraMotionText">General Debate: Inequalities in dementia services: Debbie Abrahams</p>
 			<p class="paraMotionText">General Debate: Mental health and long-term conditions: Peter Dowd</p>
-			<h3 class="paraBusinessTodayChamberHeading" id="20240513-36">Further Information<a href="#20240513-36" aria-label="Anchor" title="Permalink for Further Information" data-anchor-icon="§" class="anchor-link"></a></h3>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-37">Members’ Guide to Chamber proceedings<a href="#20240513-37" aria-label="Anchor" title="Permalink for Members’ Guide to Chamber proceedings" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h3 class="paraBusinessTodayChamberHeading" id="20240513-27">Further Information<a href="#20240513-27" aria-label="Anchor" title="Permalink for Further Information" data-anchor-icon="§" class="anchor-link"></a></h3>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-28">Members’ Guide to Chamber proceedings<a href="#20240513-28" aria-label="Anchor" title="Permalink for Members’ Guide to Chamber proceedings" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">The <a href="https://guidetoprocedure.parliament.uk/mps-guide-to-procedure">Members’ Guide</a> to Chamber proceedings is available on the Parliamentary website</p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-38">Business of the Day<a href="#20240513-38" aria-label="Anchor" title="Permalink for Business of the Day" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-29">Business of the Day<a href="#20240513-29" aria-label="Anchor" title="Permalink for Business of the Day" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Documents and reports relating to the business being held in the Chamber are available on the Commons Business Briefings webpage: <a href="http://www.parliament.uk/business/publications/research/commons-business-briefings/">www.parliament.uk/business/publications/research/commons-business-briefings/</a></p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-39">Written Statements<a href="#20240513-39" aria-label="Anchor" title="Permalink for Written Statements" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-30">Written Statements<a href="#20240513-30" aria-label="Anchor" title="Permalink for Written Statements" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Text of today’s Written Statements: <a href="https://questions-statements.parliament.uk/">https://questions-statements.parliament.uk/</a></p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-40">Select Committees<a href="#20240513-40" aria-label="Anchor" title="Permalink for Select Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-31">Select Committees<a href="#20240513-31" aria-label="Anchor" title="Permalink for Select Committees" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Select Committees Webpage: <a href="https://committees.parliament.uk/">https://committees.parliament.uk/</a></p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-41">Standing Orders Relating to Public Business<a href="#20240513-41" aria-label="Anchor" title="Permalink for Standing Orders Relating to Public Business" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-32">Standing Orders Relating to Public Business<a href="#20240513-32" aria-label="Anchor" title="Permalink for Standing Orders Relating to Public Business" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Text of Standing Orders relating to public business: <a href="https://publications.parliament.uk/pa/cm5803/cmstords/so-1932-23102023/so-2023i.pdf">https://publications.parliament.uk/pa/cm5803/cmstords/so-1932-23102023/so-2023i.pdf</a></p>
-			<h4 class="paraBusinessSub-SectionHeading" id="20240513-42">Chamber Engagement<a href="#20240513-42" aria-label="Anchor" title="Permalink for Chamber Engagement" data-anchor-icon="§" class="anchor-link"></a></h4>
+			<h4 class="paraBusinessSub-SectionHeading" id="20240513-33">Chamber Engagement<a href="#20240513-33" aria-label="Anchor" title="Permalink for Chamber Engagement" data-anchor-icon="§" class="anchor-link"></a></h4>
 			<p class="paraMotionText">Information about engaging the public with debates is available on the parliamentary website: <a href="https://www.parliament.uk/get-involved/have-your-say-on-laws/chamber-engagement/">https://www.parliament.uk/get-involved/have-your-say-on-laws/chamber-engagement/</a>.</p>
 			<p class="paraMotionText">All business papers are available via the HousePapers app on mobile devices</p>
 		</div>
