--- a/demo/samples/newHTML/OP2024-04-29-for-web.html
+++ b/demo/samples/newHTML/OP2024-04-29-for-web.html
@@ -11,6 +11,10 @@
   <!-- <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/design-system.css">
   <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/businesspapers.css"> -->
   <style>
+	@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+	div, h1, h2, h3, h4, h5, h6, p {
+	font-family: 'Open Sans', sans-serif;
+	}
     .Front-Page-Table td{vertical-align: top;}
     .paraChamberSummaryHeading{text-transform: uppercase;}
     .OP-heading-outdent{margin-left: -2.5rem;}
