Add new files to comparison table

--- a/demo/index.html
+++ b/demo/index.html
@@ -517,6 +517,43 @@
 <tr><th scope="col">Date</th><th scope="col">InDesign (concat)</th><th scope="col">PDF (concat)</th><th scope="col">Old design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
 </thead>
 <tbody>
+  <tr>
+    <td>2019-01-09</td>
+    <td><a href="" target="_blank">*</a><br /></td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2019-01-09_mark/1 Full OP/OP20190109.pdf"
+        target="_blank">PDF</a><br /></td>
+    <td><a href="https://publications.parliament.uk/pa/cm201719/cmagenda/OP190109.pdf">Old version</a></td>
+    <td><a href="samples/newHTML/OP2019-01-09-for-web.html">HTML</a><br /></td>
+    <td><a href="https://publications.parliament.uk/pa/cm201719/cmagenda/ob190109.htm">HTML</a><br /></td>
+  </tr>
+  <tr>
+    <td>2019-12-20</td>
+    <td><a href="" target="_blank">*</a><br /></td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2019-12-20_mick/1 Full OP/OP191220.pdf"
+        target="_blank">PDF</a><br /></td>
+    <td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/OP191220.pdf">Old version</a></td>
+    <td><a href="samples/newHTML/OP2019-12-20-for-web.html">HTML</a><br /></td>
+    <td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/ob191220.htm">HTML</a><br /></td>
+  </tr>
+  <tr>
+    <td>2024-01-09</td>
+    <td><a href="" target="_blank">*</a><br /></td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/2024-01-09_mick/1 Full OP/OP20240109.pdf"
+        target="_blank">PDF</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/83957/Pdf?subType=Standard">Old version</a></td>
+    <td><a href="samples/newHTML/OP2024-01-09-for-web.html">HTML</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87640/Html?subType=Standard">HTML</a><br /></td>
+  </tr>
+
+  <tr>
+    <td>2024-04-17</td>
+    <td><a href="" target="_blank">*</a><br /></td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-17_mick/1 Full OP/OP240417.pdf"
+        target="_blank">PDF</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/86770/Pdf?subType=Standard">Old version</a></td>
+    <td><a href="samples/newHTML/OP2024-04-17-for-web.html">HTML</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/86770/Html?subType=Standard">HTML</a><br /></td>
+  </tr>
 <tr><td>2024-04-22</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-22/2024-04-22_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:3e5b2971-a3c2-49c0-b56b-8b4e64fdd08e?view=published" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86885/Pdf?subType=Standard">Old version</a></td><td><a href="samples\newHTML\OP2024-04-22-for-web.html">HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86885/Html?subType=Standard">HTML</a><br/></td></tr>
 <tr><td>2024-04-23</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-23/2024-04-23_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:2e1c0f6a-21d0-4eb9-864a-fe2b14e6ed5d?view=published" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86936/Pdf?subType=Standard">Old version</a></td><td><a href="samples\newHTML\OP2024-04-23-for-web.html">HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86936/Html?subType=Standard">HTML</a><br/></td></tr>
 <tr><td>2024-04-24</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-24/2024-04-24_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:05e93105-81fa-4478-8b57-6874b19d6e7d?view=published" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86958/Pdf?subType=Standard">Old version</a></td><td><a href="samples\newHTML\OP2024-04-24-for-web.html">HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/86958/Html?subType=Standard">HTML</a><br/></td></tr>
@@ -524,7 +561,7 @@
 <tr><td>2024-04-26</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-26/2024-04-26_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:a1ae22e2-fe1b-4c48-929c-e183fc3ff51b?view=published" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87077/Pdf?subType=Standard">Old version</a></td><td><a href="samples\newHTML\OP2024-04-26-for-web.html">HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87077/Html?subType=Standard">HTML</a><br/></td></tr>
 <tr><td>2024-04-29</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-04-29/2024-04-29_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:2bd5c56c-41fe-4a9d-b1a5-3cda7c9563c3?view=published" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87107/Pdf?subType=Standard">Old version</a></td><td><a href="samples\newHTML\OP2024-04-29-for-web.html">HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87107/Html?subType=Standard">HTML</a><br/></td></tr>
 <tr><td>2024-05-16</td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-05-16/2024-05-16_Concat.indd" target="_blank">INDD</a><br/></td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/InDesign/2024-05-16/2024-05-16_Concat.pdf" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87640/Pdf?subType=Standard">Old version</a></td><td><a href="">TBC</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87640/Html?subType=Standard">HTML</a><br/></td></tr>
-<tr><td>2024-01-09</td><td><a href="" target="_blank">*</a><br/></td><td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/2024-01-09_mick/1 Full OP/OP20240109.pdf" target="_blank">PDF</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/83957/Pdf?subType=Standard">Old version</a></td><td><a href="samples/newHTML/OP2024-01-09-for-web.html">New HTML</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87640/Html?subType=Standard">HTML</a><br/></td></tr>
+
 </tbody>
 </table>
 </div>
