--- a/demo/index.html
+++ b/demo/index.html
@@ -590,7 +590,25 @@
 <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
 </thead>
 <tbody>
-<tr><td>2024-05-23</td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:87d5b7db-1dab-45b7-9d7c-608c7196d60d?view=published" target="_blank">PDF link</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87983/Pdf?subType=Standard" target="_blank">PDF link</a><br/></td><td><a href="">TBC</a><br/></td><td><a href="">TBC</a><br/></td></tr>
+  <tr>
+    <td>2024-05-01</td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/EDM_InDesign/240501/edm240501.pdf"
+        target="_blank">PDF link</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87135/Pdf?subType=Standard" target="_blank">PDF
+        link</a><br /></td>
+    <td><a href="samples/newHTML/edm240501_for-web.html"
+          target="_blank">HTML</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87135/Html?subType=Standard">HTML</a><br /></td>
+  </tr>
+  <tr>
+    <td>2024-05-23</td>
+    <td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:87d5b7db-1dab-45b7-9d7c-608c7196d60d?view=published"
+        target="_blank">PDF link</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87983/Pdf?subType=Standard" target="_blank">PDF
+        link</a><br /></td>
+    <td><a href="">TBC</a><br /></td>
+    <td><a href="">TBC</a><br /></td>
+  </tr>
 </tbody>
 </table>
 </div>
