Updated CSS `<link />` refs in HTML

--- a/demo/samples/newHTML/OP2024-04-22-for-web.html
+++ b/demo/samples/newHTML/OP2024-04-22-for-web.html
@@ -7,68 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/dist/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<title>Order Paper for 22 April 2024</title>
+
 	<link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/design-system.css">
-	<!-- <link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/businesspapers.css"> -->
+	<link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/businesspapers.css">
 	<link rel="stylesheet" href="../../css/businesspapers-2024.css">
-	<!-- <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/design-system.css">
-  <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/businesspapers.css"> -->
-<<<<<<< HEAD
-  <style>
-	@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-	div, h1, h2, h3, h4, h5, h6, p {
-	font-family: 'Open Sans', sans-serif;
-	}
-
-
-    .Front-Page-Table td{vertical-align: top;}
-    .paraChamberSummaryHeading{text-transform: uppercase;}
-    .OP-heading-outdent{margin-left: -2.5rem;}
-    @font-face {
-      font-family: National;
-      src: url(/dist/National-LFS-Book.eot);
-      src: url(/dist/National-LFS-Book.eot?#iefix) format("embedded-opentype"), url(/dist/National-LFS-Book.woff2) format("woff2"), url(/dist/National-LFS-Book.woff) format("woff")
-    }
-    @font-face {
-      font-family: National;
-      src: url(/dist/National-LF-BookItalic.eot);
-      src: url(/dist/National-LF-BookItalic.eot?#iefix) format("embedded-opentype"), url(/dist/National-LF-BookItalic.woff2) format("woff2"), url(/dist/National-LF-BookItalic.woff) format("woff");
-      font-style: italic
-    }
-    @font-face {
-      font-family: National;
-      src: url(/dist/National-LFS-Semibold.eot);
-      src: url(/dist/National-LFS-Semibold.eot?#iefix) format("embedded-opentype"), url(/dist/National-LFS-Semibold.woff2) format("woff2"), url(/dist/National-LFS-Semibold.woff) format("woff");
-      font-weight: 500
-    }
-    @font-face {
-      font-family: National;
-      src: url(/dist/National-LF-SemiboldItalic.eot);
-      src: url(/dist/National-LF-SemiboldItalic.eot?#iefix) format("embedded-opentype"), url(/dist/National-LF-SemiboldItalic.woff2) format("woff2"), url(/dist/National-LF-SemiboldItalic.woff) format("woff");
-      font-weight:500;
-      font-style:italic
-    }
-  </style>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5RLT3XR');</script>
-  <!-- End Google Tag Manager -->
-=======
 	<style>
-		.Front-Page-Table td {
-			vertical-align: top;
-		}
-
-		.paraChamberSummaryHeading {
-			text-transform: uppercase;
-		}
-
-		.OP-heading-outdent {
-			margin-left: -2.5rem;
-		}
-
 		@font-face {
 			font-family: National;
 			src: url(../../fonts/National-LFS-Book.eot);
@@ -92,11 +35,12 @@
 		@font-face {
 			font-family: National;
 			src: url(../../fonts/National-LF-SemiboldItalic.eot);
-			src: url(../../fonts/National-LF-SemiboldItalic.eot?#iefix) format("embedded-opentype"), url(../../fonts/National-LF-SemiboldItalic.woff2) format("woff2"), url(../../fonts/National-LF-SemiboldItalic.woff) format("woff");
+			src: url(../../fonts/National-LF-SemiboldItalic.eot?#iefix) format("embedded-opentype"), url(../../fonts/National-LF-SemiboldItalic.woff2) format("woff2"), url(/dist/National-LF-SemiboldItalic.woff) format("woff");
 			font-weight: 500;
 			font-style: italic
 		}
 	</style>
+
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
 			w[l] = w[l] || []; w[l].push({
@@ -107,7 +51,6 @@
 					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
 		})(window, document, 'script', 'dataLayer', 'GTM-5RLT3XR');</script>
 	<!-- End Google Tag Manager -->
->>>>>>> 47f5c96d6dc0b2fecb50b458576ea2a048bcf93c
 
 </head>
 
