--- a/demo/index.html
+++ b/demo/index.html
@@ -579,7 +579,15 @@
 <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
 </thead>
 <tbody>
-<tr><td>2024-06-05</td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:0de8b017-3735-4dbf-99f7-9fae666c4d7c?view=published" target="_blank">PDF link</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87907/Pdf?subType=Standard" target="_blank">PDF link</a><br/></td><td><a href="">TBC</a><br/></td><td><a href="">TBC</a><br/></td></tr>
+  <tr>
+    <td>2024-06-05</td>
+    <td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:0de8b017-3735-4dbf-99f7-9fae666c4d7c?view=published"
+        target="_blank">PDF link</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87907/Pdf?subType=Standard" target="_blank">PDF
+        link</a><br /></td>
+    <td><a href="">N/a</a><br /></td>
+    <td><a href="">N/a</a><br /></td>
+  </tr>
 </tbody>
 </table>
 </div>
@@ -602,12 +610,12 @@
   </tr>
   <tr>
     <td>2024-05-23</td>
-    <td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:87d5b7db-1dab-45b7-9d7c-608c7196d60d?view=published"
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/EDM_InDesign/240523/edm240523.pdf"
         target="_blank">PDF link</a><br /></td>
     <td><a href="https://commonsbusiness.parliament.uk/Document/87983/Pdf?subType=Standard" target="_blank">PDF
         link</a><br /></td>
-    <td><a href="">TBC</a><br /></td>
-    <td><a href="">TBC</a><br /></td>
+    <td><a href="samples/newHTML/edm240523_for-web.html">HTML</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87983/Html?subType=Standard">HTML</a><br /></td>
   </tr>
 </tbody>
 </table>
@@ -620,8 +628,15 @@
 <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
 </thead>
 <tbody>
-<tr><td>2024-06-05</td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:508a1e22-7257-42ac-a6e9-ae9b07138495?view=published" target="_blank">PDF link</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87908/Pdf?subType=Standard" target="_blank">PDF link</a><br/></td><td><a href="">TBC</a><br/></td><td><a href="">TBC</a><br/></td></tr>
-<tr><td>2024-06-14</td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:49ebfc81-aad3-40e2-ac55-06144a509b3e?view=published" target="_blank">PDF link</a><br/></td><td><a href="https://commonsbusiness.parliament.uk/Document/87585/Pdf?subType=Standard" target="_blank">PDF link</a><br/></td><td><a href="">TBC</a><br/></td><td><a href="">TBC</a><br/></td></tr>
+  <tr>
+    <td>2024-06-05</td>
+    <td><a href="https://github.com/hoc-ppu/business-papers-redesign/raw/master/FDO_InDesign/240501/fdo240521.pdf"
+        target="_blank">PDF link</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87867/Pdf?subType=Standard" target="_blank">PDF
+        link</a><br /></td>
+    <td><a href="samples/newHTML/fdo240521_for-web.html">HTML</a><br /></td>
+    <td><a href="https://commonsbusiness.parliament.uk/Document/87867/Html?subType=Standard">HTML</a><br /></td>
+  </tr>
 </tbody>
 </table>
 <!--
