--- a/samples/newHTML/fdo240521_for-web.html
+++ b/samples/newHTML/fdo240521_for-web.html
@@ -7,7 +7,7 @@
   <link href="/dist/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <title>UK Parliament Tuesday 21 May 2024</title>
   <link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/design-system.css">
-  <!-- <link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/businesspapers.css"> -->
+  <link rel="stylesheet" href="https://designsystem.parliament.uk/apps/commons-business/v1.0/css/businesspapers.css">
   <!-- <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/design-system.css">
   <link rel="stylesheet" href="https://commonsbusiness.parliament.uk/external/html-papers/v1.0/businesspapers.css"> -->
   <link rel="stylesheet" href="publications.parliament.uk/pa/styles/commons-business/businesspapers-2024-001.css">
